<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MENU OPCIONES -->
    <string name="menu_configuracion">Preferences</string>
    <string name="menu_acercaDe">About</string>

    <!-- MENU PRINCIPAL -->
    <string name="action_settings">Settings</string>
    <string name="menu_1">Show Places</string>
    <string name="menu_2">Preferences</string>
    <string name="menu_3">About</string>
    <string name="menu_4">Exit</string>

    <!-- PANTALLA DE EDICION LUGAR -->
    <string name="name">Name:</string>
    <string name="box_name">Something that identifies the place</string>
    <string name="type">Type:</string>
    <string name="addr">Address:</string>
    <string name="box_addr">Site Address</string>
    <string name="tlf">Phone:</string>
    <string name="box_tlf">Phone contact</string>
    <string name="url">Url:</string>
    <string name="box_url">Web page</string>
    <string name="comment">Comment:</string>
    <string name="box_coment">Enter your notes</string>

    <!-- PANTALLA ACERCA DE -->
    <string name="acercadeText">This program has been developed in the course as an example to demonstrate how Android can launch new activity from the main activity.</string>

	<!-- TITULOS DE ACTIVIDADES -->
	<string name="app_name">My Places</string>
	<string name="title_activity_edicion_lugar">Edit Location</string>
	<string name="title_activity_preferencias">Preferences</string>
	<string name="title_activity_acercade">About</string>
	<string name="title_activity_vista_lugar">View Location</string>
</resources>
