<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/name" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textNombre"
            android:ems="10"
            android:hint="@string/box_name"
            android:inputType="textPostalAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nombre"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_alignTop="@id/textTipo"
            android:layout_toRightOf="@id/textTipo"/>

        <TextView
            android:id="@+id/textDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textTipo"
            android:text="@string/addr"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textDireccion"
            android:ems="10"
            android:hint="@string/box_addr"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/direccion"
            android:text="@string/tlf"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/direccion"
            android:layout_toRightOf="@+id/textNombre"
            android:ems="10"
            android:hint="@string/box_tlf"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/telefono"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textUrl"
            android:ems="10"
            android:hint="@string/box_url"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/textComentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/url"
            android:text="@string/comment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textComentario"
            android:ems="10"
            android:hint="@string/box_coment"
            android:inputType="textMultiLine" />

    </RelativeLayout>

</ScrollView>
